spacing fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ h6 {
 
   .navmenu>ul>li {
     white-space: nowrap;
-    padding:9px;
+    padding:14px;
   }
 
   .navmenu>ul>li:last-child {
